# kilkatest

./: README.md  emojicreator.py  nftgift.py  randomizer_bot.py
.github/workflows/: bothost.yml
bot_constructor/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot_constructor/telegram_bot_constructor/: config.py  emoji.py  exporter.py  keyboards.py  main.py
bot_constructor/telegram_bot_constructor/child/: handlers.py  runtime.py
bot_constructor/telegram_bot_constructor/db/: models.py  repo.py  session.py
bot_constructor/telegram_bot_constructor/parent/: dispatcher.py  menu.py  states.py
bot_constructor/telegram_bot_constructor/parent/handlers/: admin.py  bots.py  broadcast.py  editor.py  keyboards.py  start.py  stats.py
bothost/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bothost/bothost/: __init__.py  __main__.py  bundle.py  config.py  db.py  emoji.py  keyboards.py  plans.py  runner.py  scheduler.py  states.py  validator.py
bothost/bothost/handlers/: __init__.py  admin.py  code.py  manage.py  payment.py  start.py
bothost/tests/: test_db.py
bothost/userbot/: Dockerfile  requirements.txt
