[project]
name = "telegram-bot-constructor"
version = "0.1.0"
description = "Бесплатный конструктор Telegram-ботов с поддержкой premium emoji"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.13.1",
    "SQLAlchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["telegram_bot_constructor*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]
